--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@ html {
   font-size: 16px;
   box-sizing: border-box;
 }
-
+*,*:before,*:after{
+   box-sizing: inherit;
+}
 .main-container {
   position: relative;
-  box-sizing: border-box;
   margin: 200px auto;
-  padding: 40px;
   text-siz: 16px;
   font-family: "Karla", sans-serif;
   width: 800px;
@@ -17,6 +17,11 @@ html {
   border-radius: 15px;
   box-shadow: 3px 6px 90px -20px hsl(218, 22%, 67%);
   overflow: hidden;
+}
+.upper-portion{
+padding: 40px;
+width: 100%;
+height: 50%;
 }
 h2 {
   color: hsl(179, 62%, 43%);
@@ -27,28 +32,30 @@ h3 {
   color: hsl(71, 73%, 54%);
 }
 
-.main-container > p {
+.upper-portion > p {
   color: rgba(0, 0, 0, 0.5);
 }
 .box {
   position: absolute;
-  box-sizing: inherit;
+  display: inline-block;
   color: white;
   background-color: hsl(179, 62%, 43%);
-  width: 50%;
-  height: 50%;
-  padding: 20px;
-  padding-left: 40px;
+  
 }
 .left-box {
-  left: 0;
-  bottom: 0;
-  border-radius: 0px, 0px, 0px, 15px;
+ height: 50%;
+  width: 50%;
+  padding: 20px;
+  padding-left: 40px;
+  left : 0;
+  
 }
 .right-box {
-  border-radius: 0px, 0px, 15px, 0px;
-  bottom: 0;
-  right: 0;
+  height: 50%;
+  width: 50%;
+  padding: 20px;
+  padding-left: 40px;
+  right:0;
   background-color: hsla(179, 62%, 43%, 0.8);
 }
 .text {
@@ -70,10 +77,10 @@ h3 {
 #signUp{
   background-color: hsl(71, 73%, 54%);
   box-shadow: 3px 8px 30px -12px hsl(177, 6%, 35%);
-  
+  padding : 20px;
   margin-left: 5%;
   width: 80%;
-  height: 20%;
+  height: 25%;
   text-align: center;
   color: white;
   border: 0;
@@ -84,4 +91,26 @@ h3 {
 #signUp:hover{
   box-shadow: 3px 8px 30px -12px rgb(255, 255, 255);
   
+}
+
+@media (max-width:868px){
+  
+  
+  .upper-position{
+    display: block;
+  }
+  .box{
+    width: 100%;
+    display: block;
+    position: static;
+    
+  }
+  .main-container{
+    width: 80%;
+    height: auto;
+    position: static;
+  }
+  .signUp {
+    width:
+  }
 }
